--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deltify - Digital Agency</title>
-    <link rel="stylesheet" href="deltify.css">
+    <link rel="stylesheet" href="./deltify.css">
     <script src="https://kit.fontawesome.com/c8b934b995.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
@@ -285,22 +285,22 @@
                         aliquet nibh nec urna.</p>
                     <h2>How can I lorem ipusm?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque
-                        aliquet nibh nec urna.</small>
+                        aliquet nibh nec urna.</p>
                         <h2>Which payment methods are acceptable?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque
-                            aliquet nibh nec urna.</small>
+                            aliquet nibh nec urna.</p>
                 </div>
                 <div class="Qtext">
                     <h2>How can I lorem ipusm?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque
-                        aliquet nibh nec urna.</small>
+                        aliquet nibh nec urna.</p>
                         <h2>How can I lorem ipusm?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque
-                            aliquet nibh nec urna.</small>
+                            aliquet nibh nec urna.</p>
                             <h2>How can I lorem ipusm?</h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit.
                                 Pellentesque
-                                aliquet nibh nec urna.</small>
+                                aliquet nibh nec urna.</p>
                 </div>
             </div>
         </section>
@@ -361,20 +361,16 @@
                             <h2>Our Services</h2>
                             <li> Web Solution</li>
                             <li> App Design</li>
-                    </ul>
-
-                </div>
 
 
-            </footer>
+
             <div class="copyright">
                 <p>@ Copyright 2020 <span>Deltify Designs</span>. All rights reserved.</p>
             </div>
 
 
         </div>
-
-    </div>
+</footer>
 </body>
 
 </html>
