--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deltify - Digital Agency</title>
+    <title>Deltify  Agency</title>
     <link rel="stylesheet" href="./deltify.css">
     <script src="https://kit.fontawesome.com/c8b934b995.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
