--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Deltify  Agency</title>
     <link rel="stylesheet" href="./deltify.css">
     <script src="https://kit.fontawesome.com/c8b934b995.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -28,6 +29,7 @@
                     <li><a href="">Contact</a></li>
                 </ul>
                 <div><button class="navBtn">SayHi</button></div>
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </nav>
             <section class="hero">
                 <div class="HeroText">
